Add query output formatting guidance and queries/ directory to gitignore
- Add comprehensive query output formatting section to KQL authoring skill
- Define when to create files vs provide queries in chat (single vs multiple)
- Add markdown file structure template for query collections
- Add /queries directory location guidance
- Add queries/ directory to .gitignore to exclude environment-specific query files
- Update validation workflow to emphasize testing before providing queries
- Add platform schema conversion guidance (Timestamp vs TimeGenerated)
- Add time range formatting guidance with ago() function examples

--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,9 @@ archive/
 # Authoring (blog drafts and style guides)
 authoring/
 
+# Query files (KQL query collections - may contain environment-specific info)
+queries/
+
 # IDE
 .vscode/
 .idea/
