Move critical-storage-exposure to drafts (draft skill)
- Remove from copilot-instructions.md and README.md skill tables
- Remove from project structure tree
- Update skill count 12 → 11 across README
- Move skill folder to drafts/ (gitignored)
- Add drafts/ to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,9 @@ archive/
 # Authoring (blog drafts and style guides)
 authoring/
 
+# Draft skills (work in progress, not yet published)
+drafts/
+
 # IDE
 .vscode/
 .idea/
