update skill files and copilot instructions
- copilot-instructions: add Status to dynamic/string pitfall list, restructure
  pre-authored query file rule for Timestamp vs TimeGenerated, update Azure MCP
  Server detection from AppId 1950a258 to 04b07795 (Azure CLI credential)
- exposure-investigation: fix ExposureGraph queries to use double parse_json
  extraction (fixes null returns via MCP), add DeviceTvmCertificateInfo DeviceInfo
  join requirement, add timestamp to report filename (YYYYMMDD_HHMMSS), expand
  known pitfalls table
- mcp-usage-monitoring: add rule 10 (use pre-authored queries as-is), update
  Azure MCP fingerprint to 04b07795, sanitize PII (Contoso placeholder),
  soften exact query counts to approximations
- gitignore: add notes/ directory

--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,9 @@ authoring/
 # Draft skills (work in progress, not yet published)
 drafts/
 
+# Personal notes (not for repo)
+notes/
+
 # IDE
 .vscode/*
 !.vscode/mcp.json.template
